--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,17 @@
 /classes
 /checkouts
 pom.xml
+dev-config.edn
+test-config.edn
 *.jar
 *.class
 /.lein-*
+profiles.clj
 /.env
 .nrepl-port
-
+/.shadow-cljs
+package.json
+package-lock.json
+shadow-cljs.edn
+/node_modules
 /log
