--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 /classes
 /checkouts
 pom.xml
+dev-config.edn
+test-config.edn
 *.jar
 *.class
 /.lein-*
+profiles.clj
 /.env
 .nrepl-port
-
 /log
