--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,21 +1,22 @@
 name: Smoke tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   test-all-together-with-latest-versions:
     runs-on: ubuntu-latest
 
     steps:
-      # - uses: actions/checkout@v2
-      # - run: |
-      #     date > generated.txt
-      #     git config user.name nfedyashev
-      #     git config user.email nfedyashev@gmail.com
-      - name: Prepare java
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup java
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 12.0.2
 
       - name: Install all the tools together
         uses: DeLaGuardo/setup-clojure@master
