--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,13 +18,23 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  test-all-together-with-latest-versions:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup java
+        uses: actions/setup-java@v1
+        with:
+          java-version: 12.0.2
+
+      - name: Install all the tools together
+        uses: DeLaGuardo/setup-clojure@master
+        with:
+          tools-deps: latest
+          lein: latest
+
+      - name: Execute dummy clojure code
+        run: lein run -m luminusdiff.core
